<resources>
    <string name="app_name">Cast for Chrome Tv</string>
    <string name="Audios">Music</string>
    <string name="Close">Close</string>
    <string name="Download">Download</string>
    <string name="Downloads">Downloads</string>
    <string name="NoUrlFound">No Url Found in you input</string>
    <string name="Permissiondenied">:( Permission denied</string>
    <string name="Preview">Preview</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Share">Share App</string>
    <string name="Shareusing">Share using</string>
    <string name="SizeUnknown">Size: unknown</string>
    <string name="Submitnonworking">Submit non working link</string>
    <string name="Videos">Video</string>
    <string name="Wait">Wait…</string>
    <string name="_1_press_check_always_allow_from_this_computer">1. Press CHECK “Always allow from this computer”.</string>
    <string name="_1_your_android_device_needs_to_be_connected_to_the_same_wi_fi_network_as_your_fire_stick_tv">1. Your Android Device needs to be connected to the same Wi-Fi network as your Fire Stick/TV.</string>
    <string name="_2_on_fire_stick_tv_home_screen_scroll_right_and_select_settings_screen">2. On Fire Stick/TV Home screen, scroll right and select Settings screen.</string>
    <string name="_2_select_ok_button">2. Select OK button.</string>
    <string name="pref_resize_dialog_text">Select image resize factor:</string>
    <string name="_3_scroll_right_and_select_my_fire_tv">3. Scroll right and select My Fire TV</string>
    <string name="_4_scroll_down_and_select_developer_options">4. Scroll down and select Developer options.</string>
    <string name="_5_turn_on_adb_debugging">5. Turn On ADB debugging.</string>
    <string name="about_version">About Version: %s</string>
    <string name="access_history">Access history</string>
    <string name="action_settings">Settings</string>
    <string name="add_queue">Add Queue</string>
    <string name="all_photo">Photo</string>
    <string name="all_video">All Videos</string>
    <string name="allow_usb_debugging_on_tv">Allow USB Debugging on TV</string>
    <string name="apple_tv">Apple TV</string>
    <string name="are_you_sure_to_exit_the_browser">Are you sure to exit the Application?</string>
    <string name="can_channel_not_connect">Can\'t find channel, Please connect to TV</string>
    <string name="can_find_channel">Can\'t find channel</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="cast">Cast</string>
    <string name="cast_photo">Cast Photo</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_to_tv">Cast to TV</string>
    <string name="cast_to_tv_intro">Cast smartphone screen to big TV screen stably</string>
    <string name="click_on">Click on “ START MIRRORING”.</string>
    <string name="close">Close</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_to">Connecting to</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="detail_mirror">Completely duplicate the content displayed on the phone screen.</string>
    <string name="detail_remote">Control your TV using mobile phone with WiFi connection.</string>
    <string name="different_videos_may">Different videos may require different modes. Try to switch the mode when videos can’t be cast successfully.</string>
    <string name="disconnect">Disconnect</string>
    <string name="eight">8</string>
    <string name="empty">Empty</string>
    <string name="empty_text">Empty text</string>
    <string name="enter_the_pin_code">Enter the pin code</string>
    <string name="exit_app">Exit</string>
    <string name="fail_connect_sony">Connected fail. Please try again!!</string>
    <string name="file_available">File available</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="general">General</string>
    <string name="get_start">Get Start</string>
    <string name="guide_connect_same_wifi">1. Make sure your phone and TV are connected to the same Wi-Fi network</string>
    <string name="history">History</string>
    <string name="hithere">hi there</string>
    <string name="home">Home</string>
    <string name="how_to_cast">How to Cast</string>
    <string name="how_to_mirror">How to Screen Mirror</string>
    <string name="how_to_remote">How to Remote</string>
    <string name="html_enter_pin">Enter pin: </string>
    <string name="html_four_digits">Four digits</string>
    <string name="html_no_mjpeg_support">Sorry :(&lt;br&gt;Seems that this browser does not support MJPEG.&lt;br&gt;&lt;br&gt;This check is inaccurate&lt;br&gt;You can disable it in application settings</string>
    <string name="html_stream_require_pin">This stream require PIN to access it.</string>
    <string name="html_submit_text">Submit</string>
    <string name="html_wrong_pin">Wrong pin!</string>
    <string name="hty_connect2">2. Click the connect button.</string>
    <string name="hty_connect3">3. Look for the device you want to connect to.</string>
    <string name="hty_connect4">4. Select the feature you want to use: cast photos or cast video,… .</string>
    <string name="hty_connect5">5. Select the image or video you want to show on your TV and start enjoying.</string>
    <string name="hty_mirror2">2. Click to select Screen Mirroring feature.</string>
    <string name="hty_mirror3">3. Here you can select How to you to see details of how to connect.</string>
    <string name="hty_mirror4">4. Click the START button to start using the feature.</string>
    <string name="hty_mirror5">5. Connection successful. Now your phone screen is displayed on the TV.</string>
    <string name="hty_remote2">2. Click the Remote Control For TV feature to switch to control.</string>
    <string name="hty_remote3">3. Click the connect button.</string>
    <string name="hty_remote4">4. Look for the device you want to connect to.</string>
    <string name="hty_remote5">5. Connection successful. Now you can control the TV via smartphone.</string>
    <string name="i_got_it">I got It</string>
    <string name="i_know_don_t_show_this_again">I know, don’t show this again.</string>
    <string name="image_generator_go_to_new_address">Please go to new address</string>
    <string name="image_generator_on_device">ON DEVICE</string>
    <string name="image_generator_press">PRESS</string>
    <string name="image_generator_reload_this_page">Please reload this page</string>
    <string name="image_generator_settings_changed">SETTINGS CHANGED</string>
    <string name="index_page">file:///android_asset/castweb/index.html</string>
    <string name="instagram">Instagram</string>
    <string name="intro_connect">Instructions for connecting screen mirroring</string>
    <string name="intro_connects">Cast TV connection guide</string>
    <string name="intro_remote">Instructions for connecting TV remote control</string>
    <string name="lag_english">English</string>
    <string name="lag_finnish">Suomalainen</string>
    <string name="lag_french">Français</string>
    <string name="lag_hindi">हिन्दी</string>
    <string name="lag_indonesian">bahasa Indonesia</string>
    <string name="lag_japan">Japan</string>
    <string name="lag_kr">Korean</string>
    <string name="lag_norwegian">Norsk</string>
    <string name="lag_russian">Russian</string>
    <string name="lag_spanish">Español</string>
    <string name="lag_turkish">Türk</string>
    <string name="lag_vn">Việt Nam</string>
    <string name="language">Languages</string>
    <string name="language_en">English ( United State)</string>
    <string name="main_activity_error_msg_unknown_format">System returns image in unknown format. Currently no fix available.\10Sorry.</string>
    <string name="main_activity_error_title">Error.</string>
    <string name="main_activity_no_wifi_connected">No WiFi connected</string>
    <string name="main_activity_start_stream">Start Mirroring</string>
    <string name="main_activity_toast_cast_permission_deny">Screen Cast permission denied</string>
    <string name="menu_google_drive">Google Drive</string>
    <string name="more">More</string>
    <string name="netflix">Netflix</string>
    <string name="next">Next</string>
    <string name="nine">9</string>
    <string name="no">No</string>
    <string name="no_resource_found">No Resource Found</string>
    <string name="no_support_remote">The device does not have a remote feature. We will develop remote feature on this device soon!</string>
    <string name="not_support">Not Support</string>
    <string name="ok">OK</string>
    <string name="on_your_tv_if_prompt_asked_for_allow_debugging">On your TV if prompt asked for Allow Debugging</string>
    <string name="one">1</string>
    <string name="open_this">Open this website on the other device and type the IP_Address:</string>
    <string name="pairing_des">Please confirm the connection on your TV</string>
    <string name="pairing_with_tv">Pairing with TV</string>
    <string name="please_make_sure">Please make sure the target device has network ADB enabled.</string>
    <string name="please_play_the_video">Please play the video first and the resource button will be available after the resource detected.</string>
    <string name="pref_auto_change_pin">Auto change pin</string>
    <string name="pref_auto_change_pin_summary">Generate new pin for each new stream</string>
    <string name="pref_client_timeout">Client connection timeout</string>
    <string name="pref_client_timeout_summary">Set time for client response in seconds</string>
    <string name="pref_enable_pin">Enable pin</string>
    <string name="pref_enable_pin_summary">Protect access to stream with pin</string>
    <string name="pref_hide_pin">Auto hide pin on stream start</string>
    <string name="pref_hide_pin_summary">Show asterisks instead pin while streaming</string>
    <string name="pref_html_back_color">Page background color</string>
    <string name="pref_html_back_color_summary">Set HTML page background color</string>
    <string name="pref_jpeg_quality">JPEG quality</string>
    <string name="pref_jpeg_quality_summary">Set JPEG quality</string>
    <string name="pref_key_auto_change_pin">PREF_KEY_AUTO_CHANGE_PIN</string>
    <string name="pref_key_client_con_timeout">PREF_KEY_CLIENT_CON_TIMEOUT</string>
    <string name="pref_key_enable_pin">PREF_KEY_ENABLE_PIN</string>
    <string name="pref_key_hide_pin_on_start">PREF_KEY_HIDE_PIN_ON_START</string>
    <string name="pref_key_html_back_color">PREF_KEY_HTML_BACK_COLOR</string>
    <string name="pref_key_jpeg_quality">PREF_KEY_JPEG_QUALITY</string>
    <string name="pref_key_minimize_on_stream">PREF_KEY_MINIMIZE_ON_STREAM</string>
    <string name="pref_key_mjpeg_check">PREF_KEY_MJPEG_CHECK</string>
    <string name="pref_key_new_pin_on_app_start">PREF_KEY_NEW_PIN_ON_APP_START</string>
    <string name="pref_key_resize_factor">PREF_KEY_RESIZE_FACTOR</string>
    <string name="pref_key_server_port">PREF_KEY_SERVER_PORT</string>
    <string name="pref_key_set_pin">PREF_KEY_SET_PIN</string>
    <string name="pref_key_stop_on_sleep">PREF_KEY_STOP_ON_SLEEP</string>
    <string name="pref_minimise_on_stream_summary">Minimize app on stream start</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="title_br1">Make sure your phone and cast\ndevice are connected to the same Wi-Fi.</string>
    <string name="title_br2">Open this website on the other device:</string>
    <string name="title_wbr">The IP address may change every time you connect, so please make sure each number is entered correctly in the browser address bar.</string>
    <string name="two">2</string>
    <string name="zero">0</string>
    <string name="keyboard_input">keyboard Input</string>
    <string name="send">Send</string>
    <string name="number">Number</string>
</resources>