<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_connectFireTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/allow_usb_debugging_on_tv"
            android:textColor="@color/color_txt"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/on_your_tv_if_prompt_asked_for_allow_debugging" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/_1_press_check_always_allow_from_this_computer"
            android:textColor="@color/color_txt"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/_2_select_ok_button"
            android:textColor="@color/color_txt"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/imv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/i_know_don_t_show_this_again"
                android:textColor="@color/color_txt"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <Button
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:background="@drawable/bg_border_red"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
