<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_200sdp"
    android:layout_gravity="center"
    android:background="@drawable/bg_border_item"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/keyboard_input"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/edt_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_toStartOf="@+id/btn_send"
                android:background="@drawable/btn_try_again"
                android:text="@string/close"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/btn_try_again"
                android:text="@string/send"
                app:backgroundTint="@null" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
